package edu.fiuba.algo3.modelo.Escenario;

public enum TamanioMapa {
    CHICO,
    GRANDE
}
